--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "gulp-bower": "0.0.10",
     "gulp-notify": "^2.2.0",
     "gulp-ruby-sass": "^0.7.1"
+  },
+  "dependencies": {
+    "d3": "^4.2.4"
   }
 }
