--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "POC-Front-End-Boostrap",
+  "name": "poc-front-end-bootstrap",
   "version": "0.0.0",
   "homepage": "https://github.com/unisaurus-rex/POC-Front-End-Bootstrap",
   "authors": [
